Add ARN properties for all queue URL properties